feat: cities: post, get
