# internal/api/http/handler/handlers.go
@@ -1,9 +1,12 @@
 package handler
 
 import (
+	"encoding/json"
 	"net/http"
 
 	api "github.com/gxravel/bus-routes/internal/api/http"
+	"github.com/gxravel/bus-routes/internal/logger"
+	"github.com/gxravel/bus-routes/internal/model"
 )
 
 func (srv *Server) getHealth(w http.ResponseWriter, r *http.Request) {
@@ -18,7 +21,7 @@ func (srv *Server) getHealth(w http.ResponseWriter, r *http.Request) {
 	api.RespondEmpty(w)
 }
 
-func (s Server) getBuses(w http.ResponseWriter, r *http.Request) {
+func (s *Server) getBuses(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 
 	busFilter, err := api.ParseBusFilter(r)
@@ -37,4 +40,63 @@ func (s Server) getBuses(w http.ResponseWriter, r *http.Request) {
 		Items: buses,
 		Total: int64(len(buses)),
 	})
+}
+
+func (s *Server) postBuses(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+
+	var buses = make([]*model.Bus, 0)
+	if err := json.NewDecoder(r.Body).Decode(&buses); err != nil {
+		logger.FromContext(ctx).WithErr(err).Error("decoding data from post buses request")
+		api.RespondError(ctx, w, http.StatusInternalServerError, err)
+		return
+	}
+
+	err := s.busroutes.PostBuses(ctx, buses...)
+	if err != nil {
+		api.RespondError(ctx, w, http.StatusInternalServerError, err)
+		return
+	}
+
+	api.RespondCreated(w)
+}
+
+func (s *Server) getCities(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+
+	cityFilter, err := api.ParseCityFilter(r)
+	if err != nil {
+		api.RespondError(ctx, w, http.StatusBadRequest, err)
+		return
+	}
+
+	cities, err := s.busroutes.GetCities(ctx, cityFilter)
+	if err != nil {
+		api.RespondError(ctx, w, http.StatusInternalServerError, err)
+		return
+	}
+
+	api.RespondDataOK(ctx, w, api.RangeItemsResponse{
+		Items: cities,
+		Total: int64(len(cities)),
+	})
+}
+
+func (s *Server) postCities(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+
+	var names = make([]string, 0)
+	if err := json.NewDecoder(r.Body).Decode(&names); err != nil {
+		logger.FromContext(ctx).WithErr(err).Error("decoding data from post cities request")
+		api.RespondError(ctx, w, http.StatusBadRequest, err)
+		return
+	}
+
+	err := s.busroutes.PostCities(ctx, names...)
+	if err != nil {
+		api.RespondError(ctx, w, http.StatusInternalServerError, err)
+		return
+	}
+
+	api.RespondCreated(w)
 }
